Fix horizontal scroll

--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,7 @@
 body,html {
   height: 100%;
+  overflow-x: hidden;
+  max-width: 100%;
 }
 
 /* STYLING NAVBAR */
